fixed layouts on mobile by using dvh

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -47,7 +47,7 @@ select {
   background-color: black;
 }
 
-.App {
+/* .App {
   height: 100vh;
   width: 100vw;
-}
+} */
